--- a/login_bootstrap_style/app/views/devise/registrations/new.html.erb
+++ b/login_bootstrap_style/app/views/devise/registrations/new.html.erb
@@ -14,7 +14,7 @@
 		<%= f.password_field :password %>
 	</div>
 </div>
-<div class="clearfix"><%= f.label :password_confirmation, :style=>"width:140px"%>
+<div class="clearfix"><%= f.label :password_confirmation%>
 	<div class="input">
 		<%= f.password_field :password_confirmation %>
 	</div>
